# reninja

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  buildbuddy.yaml  gin  go.mod  go.sum  regen_protos.sh  run_regression_tests.sh  run_regressions.sh
cmd/ninja/: BUILD.bazel  main.go  ninja.go
cmd/reninja/: reninja.go
genproto/action_cache/: action_cache.pb.go
genproto/build_event_stream/: build_event_stream.pb.go
genproto/build_events/: build_events.pb.go
genproto/build_status/: build_status.pb.go
genproto/command_line/: command_line.pb.go
genproto/failure_details/: failure_details.pb.go
genproto/invocation_policy/: invocation_policy.pb.go
genproto/metrics/: package_load_metrics.pb.go
genproto/option_filters/: option_filters.pb.go
genproto/publish_build_event/: publish_build_event.pb.go  publish_build_event_grpc.pb.go
genproto/remote_execution/: remote_execution.pb.go  remote_execution_grpc.pb.go
genproto/resource/: resource.pb.go
genproto/semver/: semver.pb.go
genproto/spawn/: spawn.pb.go
genproto/strategy_policy/: strategy_policy.pb.go
internal/bes_event/: bes_event.go
internal/browse/: browse.go
internal/build_config/: build_config.go
internal/build_event_publisher/: build_event_publisher.go
internal/build_log/: build_log.go  build_log_test.go
internal/build_metadata/: build_metadata.go
internal/bytebufferpool/: bytebufferpool_test.go
internal/cachetools/: cachetools.go
internal/clean/: BUILD.bazel  clean.go  clean_test.go
internal/command_collector/: command_collector.go  command_collector_test.go
internal/compact_execution/: compact_execution.go
internal/compression/: compression.go
internal/debug_flags/: debug_flags.go
internal/dependency_scan/: dependency_scan.go  dependency_scan_test.go
internal/depfile_parser/: depfile_parser.go  depfile_parser.go.in  depfile_parser_test.go
internal/deps_log/: deps_log.go  deps_log_test.go
internal/digest/: digest.go
internal/disk/: BUILD.bazel  disk.go  disk_test.go
internal/dyndep/: dyndep.go
internal/dyndep_parser/: dyndep_parser.go  dyndep_parser_test.go
internal/edit_distance/: edit_distance.go  edit_distance_test.go
internal/elide_middle/: elide_middle.go  elide_middle_bench_test.go  elide_middle_test.go
internal/eval_env/: eval_env.go  eval_env_test.go~
internal/exit_status/: exit_status.go
internal/explanations/: explanations.go  explanations.go~  explanations_test.go  explanations_test.go~
internal/file_hasher/: file_hasher.go  file_hasher_test.go
internal/filetransfer/: filetransfer.go
internal/flamegraph/: flamegraph.go
internal/graph/: BUILD.bazel  edge.go  edge_test.go  eval_env.go  inputs_collector.go  inputs_collector_test.go  node.go  pool.go  rule.go
internal/graphviz/: graphviz.go
internal/grpc_client/: grpc_client.go
internal/implicit_dep_loader/: implicit_dep_loader.go
internal/include_scanner/: include_scanner.go  include_scanner_test.go
internal/ioutil/: ioutil.go
internal/jobserver/: jobserver.go  jobserver_posix.go  jobserver_posix_test.go  jobserver_test.go  jobserver_windows.go
internal/lexer/: BUILD.bazel  lexer.go  lexer.go.in  lexer_test.go
internal/line_printer/: line_printer.go
internal/localcache/: localcache.go  localcache_test.go
internal/log/: BUILD.bazel  build_log.go  deps_log.go
internal/manifest_parser/: manifest_parser.go  manifest_parser_test.go
internal/metrics/: metrics.go
internal/missing_deps/: missing_deps.go  missing_deps_test.go
internal/ninjarc/: ninjarc.go  ninjarc_test.go
internal/parser/: BUILD.bazel  debug.go  parser.go  parser_test.go
internal/priority_queue/: priority_queue.go  priority_queue_test.go
internal/project_root/: project_root.go  project_root_test.go
internal/remote/: BUILD.bazel  client.go  executor.go  grpc_client.go  remote_client.go  utils.go
internal/remote_exec/: remote_exec.go
internal/remote_flags/: remote_flags.go
internal/remote_headers/: remote_headers.go
internal/request_metadata/: request_metadata.go
internal/retry/: retry.go
internal/rpcutil/: rpcutil.go
internal/span/: span.go
internal/spawn/: spawn.go
internal/state/: BUILD.bazel  state.go  state_test.go
internal/status/: status.go  status_test.go
internal/statuserr/: statuserr.go
internal/test/: test.go
internal/tools/: BUILD.bazel  compdb.go  graph.go  query.go
misc/: output_test.py
parity_tests/: generate_testdata.sh  parity_test.go
proto/: BUILD.bazel  action_cache.proto  build_event_stream.proto  build_events.proto  build_status.proto  command_line.proto  failure_details.proto  invocation_policy.proto  option_filters.proto  package_load_metrics.proto  publish_build_event.proto  remote_execution.proto  remote_execution_simplified.proto  resource.proto  semver.proto  spawn.proto  strategy_policy.proto
recipes/: grpc.sh  protobuf.sh
regressions/: boringssl.sh  brotli.sh  duckdb.sh  grpc.sh  llvm.sh  ninja.sh  protobuf.sh
(+13 files in other folders)
