load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/buildbuddy-io/gin
gazelle(name = "gazelle")

go_library(
    name = "gin_lib",
    srcs = glob(["**/*.go"], exclude = ["main.go"]),
    importpath = "github.com/buildbuddy-io/gin",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/client",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/digest",
        "@com_github_bazelbuild_remote_apis_sdks//go/pkg/uploadinfo",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_protobuf//proto",
    ],
)

go_binary(
    name = "gin",
    srcs = ["main.go"],
    embed = [":gin_lib"],
    visibility = ["//visibility:public"],
)