load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "remote_execution_proto",
    srcs = ["remote_execution_simplified.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:duration_proto",
        "@protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "remote_execution_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/buildbuddy-io/gin/proto/remoteexecution",
    proto = ":remote_execution_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
