load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "clean",
    srcs = ["clean.go"],
    importpath = "github.com/buildbuddy-io/gin/internal/clean",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/disk",
        "//internal/graph",
        "//internal/state",
    ],
)
